Add Giao dien Share Book

--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -42,12 +42,11 @@
 
 
     <LinearLayout
-
         android:id="@+id/bookInfoSection"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
-        android:background="@color/light_teal"
+        android:background="@drawable/border_rounded"
         android:elevation="8dp"
         android:orientation="vertical"
         android:padding="16dp"
@@ -65,25 +64,62 @@
             android:textSize="22sp"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/bookAuthorDetail"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
-            android:text="Paulo Coelho"
-            android:textColor="@color/white"
-            android:textSize="14sp" />
+            android:layout_marginBottom="10sp"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/bookGenreDetail"
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="20dp"
+                android:layout_marginRight="10sp"
+                app:tint="@color/white"
+                android:src="@drawable/canhan_f" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Paulo Coelho"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
-            android:text="Văn học, Tiểu thuyết"
-            android:textColor="@color/white"
-            android:textSize="14sp" />
+            android:orientation="horizontal">
 
-        <TextView
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="20dp"
+                android:layout_marginRight="10sp"
+                app:tint="@color/white"
+                android:src="@drawable/textalignleft" />
+
+            <TextView
+                android:id="@+id/bookGenreDetail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="10dp"
+                android:text="Văn học, Tiểu thuyết"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="20dp"
+                android:layout_marginRight="10sp"
+                app:tint="@color/white"
+                android:src="@drawable/star1" />
+
+            <TextView
             android:id="@+id/bookRatingDetail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -91,23 +127,38 @@
             android:text="5.0 (10 Nhận xét)"
             android:textColor="@color/white"
             android:textSize="14sp" />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/bookPriceDetail"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
-            android:text="Miễn phí - Bạn có thể thêm vào thư viện và đọc trọn vẹn cuốn sách miễn phí"
-            android:textColor="@color/white"
-            android:textSize="14sp" />
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="20dp"
+                android:layout_marginRight="10sp"
+                app:tint="@color/white"
+                android:src="@drawable/archive" />
+
+            <TextView
+                android:id="@+id/bookPriceDetail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="10dp"
+                android:text="Miễn phí - Bạn có thể thêm vào thư viện và đọc trọn vẹn cuốn sách miễn phí"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
+        </LinearLayout>
+
 
         <!-- Read Button -->
+
         <Button
             android:id="@+id/readButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-
             android:backgroundTint="#55EFC4"
             android:text="Đọc"
             android:textColor="@android:color/white" />
@@ -123,10 +174,10 @@
     </LinearLayout>
 
     <com.google.android.material.tabs.TabLayout
+
         android:id="@+id/tabLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
