--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,12 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="teal">#1DE9B6</color>
+    <color name="gray">#949494</color>
+    <color name="green">#00E676</color>
+    <color name="teal_700">#0E5E6F</color>
+    <color name="teal_330">#FFFFFF</color>
+    <color name="teal3">#B2C7DA</color>
+    <color name="text_menu">#98BEC4</color>
+    <color name="color_ic">#E5E5E5</color>
 </resources>
