--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#357C97"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/imgAvatar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        tools:srcCompat="@tools:sample/avatars" />
+
+    <TextView
+        android:id="@+id/tVDangNhap"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:layout_marginTop="100dp"
+        android:textSize="25dp"
+        android:text="Đăng nhập bằng" />
+
+    <!-- Facebook login button -->
+    <LinearLayout
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/rounded_button_background"
+        android:padding="10dp"
+        android:gravity="center_vertical">
+
+        <ImageButton
+            android:id="@+id/imgbtnFb"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:background="@drawable/rounded_button_background"
+            app:srcCompat="@drawable/facebook"
+            android:layout_gravity="center_vertical" />
+
+        <TextView
+            android:id="@+id/FacebookLoginText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Đăng nhập bằng Facebook"
+            android:textColor="#4267B2"
+            android:textSize="20sp"
+            android:layout_marginLeft="15dp"
+            android:layout_gravity="center_vertical" />
+    </LinearLayout>
+
+    <!-- Gmail login button -->
+    <LinearLayout
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="15dp"
+        android:layout_gravity="center"
+        android:background="@drawable/rounded_button_background"
+        android:padding="10dp"
+        android:gravity="center_vertical">
+
+        <ImageButton
+            android:id="@+id/imgbtnGmail"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:background="@drawable/rounded_button_background"
+            app:srcCompat="@drawable/baseline_mail_outline_24"
+            android:layout_gravity="center_vertical" />
+
+        <TextView
+            android:id="@+id/GmailLoginText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Đăng nhập bằng Gmail"
+            android:textColor="#4267B2"
+            android:textSize="20sp"
+            android:layout_marginLeft="15dp"
+            android:layout_gravity="center_vertical" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/tVHoac"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:layout_marginTop="15dp"
+        android:textSize="25dp"
+        android:text="Hoặc" />
+
+    <!-- Phone and iCloud buttons -->
+    <LinearLayout
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="15dp"
+        android:layout_gravity="center"
+        android:padding="10dp"
+        android:gravity="center">
+
+        <ImageButton
+            android:id="@+id/imgbtnPhone"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:background="#357C97"
+            android:layout_marginStart="65dp"
+            app:srcCompat="@drawable/phone" />
+
+        <ImageButton
+            android:id="@+id/imgbtnIcloud"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:background="#357C97"
+            android:layout_marginEnd="65dp"
+            app:srcCompat="@drawable/icloud" />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/tVFooter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Bằng việc sử dụng Ergon, bạn đã đồng ý với  Những điều khoản và Chính sách bảo mật của chúng tôi."
+        android:layout_gravity="bottom"
+        android:gravity="center"
+        android:layout_weight="1"
+        android:padding="20dp"
+        android:alpha="0.5"
+        android:textSize="12sp"
+        android:textColor="@android:color/white"/>
+
+</LinearLayout>
