--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="background_color">#003F7F</color>
+    <color name="white">#FFFFFF</color>
+    <color name="button_disabled_color">#B0BEC5</color>
+    <color name="button_enabled_color">#FF8C00</color>
+    <color name="black">#000000</color>
+    <color name="colorAccent">#003F7F</color>
+    <color name="colorGray">#B0BEC5</color>"
 </resources>
