--- a/app/src/main/res/layout/activity_nhap_thong_tin_ca_nhan.xml
+++ b/app/src/main/res/layout/activity_nhap_thong_tin_ca_nhan.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#357C97"
-    tools:context=".EnterSDT">
+    tools:context=".NhapThongTinCaNhan">
 
 
     <ImageButton
