--- a/app/src/main/res/layout/activity_tao_pass_word.xml
+++ b/app/src/main/res/layout/activity_tao_pass_word.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#357C97"
-    tools:context=".TaoPassWord">
+    tools:context="com.example.project.TaoPassWord">
 
 
     <ImageButton
