Update chuc nang cua giao dien TaoPassWord bao gom nut back, thong bao da nhap du username, password, confirmPassword hay chua va nut tiep tuc

--- a/app/src/main/res/layout/activity_tao_pass_word.xml
+++ b/app/src/main/res/layout/activity_tao_pass_word.xml
@@ -79,11 +79,11 @@
 
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnContinuePassWord"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="40dp"
         android:backgroundTint="#55EFC4"
-        android:text="Button" />
+        android:text="Tiếp tục" />
 </LinearLayout>
