--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:src="@mipmap/ic_logo_foreground" />
 
     <TextView
         android:id="@+id/tVDangNhap"
