--- a/app/src/main/res/layout/activity_nhap_thong_tin_ca_nhan.xml
+++ b/app/src/main/res/layout/activity_nhap_thong_tin_ca_nhan.xml
@@ -11,7 +11,7 @@
 
 
     <ImageButton
-        android:id="@+id/imgbtnBackPassword"
+        android:id="@+id/imgbtnBackTTCN"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/circle_background"
