--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="blue">#74B9FF</color>
     <color name="yellow">#FFEAA7</color>
     <color name="gray">#C2D6DD</color>
+    <color name="bg_bar">#6BA7BC</color>
 </resources>
