--- a/app/src/main/res/layout/bottom_navigation_bar.xml
+++ b/app/src/main/res/layout/bottom_navigation_bar.xml
@@ -2,11 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/history"
+    android:id="@+id/fragment_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/teal_700"
-    tools:context=".Activity1">
+    tools:context=".UI.UI">
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager2"
