--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -90,7 +90,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginRight="100dp"
+                    android:layout_marginStart="50dp"
                     android:gravity="center">
 
                     <ImageView
@@ -117,7 +117,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginRight="100dp"
+                    android:layout_marginEnd="50dp"
+                    android:layout_marginStart="50dp"
                     android:gravity="center">
 
                     <ImageView
