--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -14,8 +14,7 @@
         android:id="@+id/nested_scroll"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/bottom_navigation">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -27,8 +26,8 @@
                 android:id="@+id/txt_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="20dp"
                 android:layout_marginTop="20dp"
+                android:padding="20dp"
                 android:text="Ergon xin chào!"
                 android:textColor="@color/white"
                 android:textSize="20sp"
@@ -41,27 +40,27 @@
                 android:layout_gravity="end"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/border_icon_search"
-                app:tint="@color/white"
                 android:padding="5dp"
-                android:src="@drawable/ic_search" />
+                android:src="@drawable/ic_search"
+                app:tint="@color/white" />
 
 
             <LinearLayout
                 android:id="@+id/title_detail"
                 android:layout_width="375dp"
                 android:layout_height="166dp"
-                android:orientation="horizontal"
-                android:background="@drawable/border_icon_title2"
-                android:layout_marginTop="30dp"
                 android:layout_gravity="center"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/border_icon_title2"
+                android:orientation="horizontal"
                 android:paddingBottom="30dp">
 
                 <ImageView
                     android:id="@+id/featured_image"
                     android:layout_width="90dp"
                     android:layout_height="110dp"
-                    android:layout_marginTop="10dp"
                     android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
                     android:background="@drawable/border_detail"
                     android:src="@drawable/stevejob" />
 
@@ -72,8 +71,8 @@
                     android:layout_weight="1"
                     android:paddingStart="16dp"
                     android:text="Tiểu sử Steve Jobs"
-                    android:textSize="16sp"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/black"
+                    android:textSize="16sp" />
 
             </LinearLayout>
 
@@ -82,44 +81,43 @@
                 android:id="@+id/quick_actions"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
                 android:orientation="horizontal"
-                android:padding="16dp"
-                android:layout_marginTop="24dp">
+                android:padding="16dp">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
                     android:layout_marginStart="50dp"
-                    android:gravity="center">
+                    android:gravity="center"
+                    android:orientation="vertical">
 
                     <ImageView
                         android:id="@+id/ic_ebook"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_marginBottom="5dp"
-                        android:src="@drawable/layer"
                         android:background="@drawable/border_icon_ebook"
-                        app:tint="@color/white"
                         android:padding="16dp"
-                    />
+                        android:src="@drawable/layer"
+                        app:tint="@color/white" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:gravity="center"
                         android:text="Ebook"
                         android:textColor="@color/white"
-                        android:textSize="14sp"
-                        android:gravity="center" />
+                        android:textSize="14sp" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginEnd="50dp"
                     android:layout_marginStart="50dp"
-                    android:gravity="center">
+                    android:layout_marginEnd="50dp"
+                    android:gravity="center"
+                    android:orientation="vertical">
 
                     <ImageView
                         android:id="@+id/ic_van_hoc"
@@ -127,42 +125,42 @@
                         android:layout_height="60dp"
                         android:layout_marginBottom="5dp"
                         android:background="@drawable/border_icon_vanhoc"
-                        app:tint="@color/white"
                         android:padding="16dp"
-                        android:src="@drawable/layer" />
+                        android:src="@drawable/layer"
+                        app:tint="@color/white" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:gravity="center"
                         android:text="Văn học"
                         android:textColor="@color/white"
-                        android:textSize="14sp"
-                        android:gravity="center" />
+                        android:textSize="14sp" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:gravity="center">
+                    android:gravity="center"
+                    android:orientation="vertical">
 
                     <ImageView
                         android:id="@+id/ic_ki_nang"
                         android:layout_width="60dp"
-                        android:layout_marginBottom="5dp"
                         android:layout_height="60dp"
+                        android:layout_marginBottom="5dp"
                         android:background="@drawable/border_icon_tuduy"
                         android:padding="16dp"
-                        app:tint="@color/white"
-                        android:src="@drawable/layer" />
+                        android:src="@drawable/layer"
+                        app:tint="@color/white" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:gravity="center"
                         android:text="Tư duy"
                         android:textColor="@color/white"
-                        android:textSize="14sp"
-                        android:gravity="center" />
+                        android:textSize="14sp" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -171,19 +169,19 @@
                 android:id="@+id/txt_trending_book"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 android:text="Trending"
-                android:textSize="18sp"
-                android:textStyle="bold"
                 android:textColor="@color/white"
-                android:layout_marginTop="16dp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
 
             <HorizontalScrollView
                 android:id="@+id/trending_scroll"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/border_detail"
                 android:layout_marginTop="8dp"
+                android:background="@drawable/border_detail"
                 android:paddingBottom="16dp"
                 android:scrollbars="none">
 
@@ -207,8 +205,7 @@
                             android:layout_width="70dp"
                             android:layout_height="100dp"
                             android:layout_marginBottom="8dp"
-                            android:background="@color/white"
-                             />
+                            android:background="@color/white" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -231,8 +228,7 @@
                             android:layout_width="70dp"
                             android:layout_height="100dp"
                             android:layout_marginBottom="8dp"
-                            android:background="@color/white"
-                             />
+                            android:background="@color/white" />
 
 
                     </LinearLayout>
@@ -250,8 +246,7 @@
                             android:layout_width="70dp"
                             android:layout_height="100dp"
                             android:layout_marginBottom="8dp"
-                            android:background="@color/white"
-                             />
+                            android:background="@color/white" />
 
 
                     </LinearLayout>
@@ -263,11 +258,11 @@
                 android:id="@+id/txt_dexuat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 android:text="Đề xuất dành cho bạn"
-                android:textSize="18sp"
-                android:textStyle="bold"
                 android:textColor="@color/white"
-                android:layout_marginTop="16dp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <HorizontalScrollView
                 android:id="@+id/dexuat_scroll"
@@ -289,56 +284,56 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
                         android:layout_marginRight="16dp"
-                        android:gravity="center">
+                        android:gravity="center"
+                        android:orientation="vertical">
 
                         <ImageView
                             android:id="@+id/iv_dexuat_book_1"
                             android:layout_width="70dp"
                             android:layout_height="100dp"
 
-                            android:background="@color/white"
-                            android:layout_marginBottom="8dp" />
+                            android:layout_marginBottom="8dp"
+                            android:background="@color/white" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:gravity="center"
                             android:text="Nhà Giả Kim"
                             android:textColor="@color/white"
-                            android:textSize="14sp"
-                            android:gravity="center" />
+                            android:textSize="14sp" />
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
                         android:layout_marginRight="16dp"
-                        android:gravity="center">
+                        android:gravity="center"
+                        android:orientation="vertical">
 
                         <ImageView
                             android:id="@+id/iv_dexuat_book_2"
                             android:layout_width="70dp"
                             android:layout_height="100dp"
-                            android:background="@color/white"
-                            android:layout_marginBottom="8dp" />
+                            android:layout_marginBottom="8dp"
+                            android:background="@color/white" />
                     </LinearLayout>
 
 
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
                         android:layout_marginRight="16dp"
-                        android:gravity="center">
+                        android:gravity="center"
+                        android:orientation="vertical">
 
                         <ImageView
                             android:id="@+id/iv_dexuat_book_3"
                             android:layout_width="70dp"
                             android:layout_height="100dp"
-                            android:background="@color/white"
-                            android:layout_marginBottom="8dp" />
+                            android:layout_marginBottom="8dp"
+                            android:background="@color/white" />
                     </LinearLayout>
 
                 </LinearLayout>
@@ -347,15 +342,5 @@
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_navigation" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
