Hien Thi Anh HomePage

--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -6,9 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light_teal"
-    tools:context=".HomePage"
     tools:ignore="ExtraText">
-
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nested_scroll"
@@ -43,7 +41,6 @@
                 android:padding="5dp"
                 android:src="@drawable/ic_search"
                 app:tint="@color/white" />
-
 
             <LinearLayout
                 android:id="@+id/title_detail"
@@ -175,84 +172,15 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-
-            <HorizontalScrollView
-                android:id="@+id/trending_scroll"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_trending"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="150dp"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/border_detail"
                 android:paddingBottom="16dp"
-                android:scrollbars="none">
-
-                <LinearLayout
-                    android:id="@+id/trending_section"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:padding="8dp">
-
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="16dp"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:id="@+id/iv_trending_book_1"
-                            android:layout_width="70dp"
-                            android:layout_height="100dp"
-                            android:layout_marginBottom="8dp"
-                            android:background="@color/white" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="Nhà Giả Kim"
-                            android:textColor="@color/white"
-                            android:textSize="14sp" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="16dp"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:id="@+id/iv_trending_book_2"
-                            android:layout_width="70dp"
-                            android:layout_height="100dp"
-                            android:layout_marginBottom="8dp"
-                            android:background="@color/white" />
-
-
-                    </LinearLayout>
-
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="16dp"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:id="@+id/iv_trending_book_3"
-                            android:layout_width="70dp"
-                            android:layout_height="100dp"
-                            android:layout_marginBottom="8dp"
-                            android:background="@color/white" />
-
-
-                    </LinearLayout>
-
-                </LinearLayout>
-            </HorizontalScrollView>
+                android:orientation="horizontal"
+                android:scrollbars="horizontal" />
 
             <TextView
                 android:id="@+id/txt_dexuat"
@@ -264,81 +192,15 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <HorizontalScrollView
-                android:id="@+id/dexuat_scroll"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_dexuat"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="150dp"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/border_detail"
                 android:paddingBottom="16dp"
-                android:scrollbars="none">
-
-                <LinearLayout
-                    android:id="@+id/dexuat_section"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:padding="8dp">
-
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="16dp"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:id="@+id/iv_dexuat_book_1"
-                            android:layout_width="70dp"
-                            android:layout_height="100dp"
-
-                            android:layout_marginBottom="8dp"
-                            android:background="@color/white" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="Nhà Giả Kim"
-                            android:textColor="@color/white"
-                            android:textSize="14sp" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="16dp"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:id="@+id/iv_dexuat_book_2"
-                            android:layout_width="70dp"
-                            android:layout_height="100dp"
-                            android:layout_marginBottom="8dp"
-                            android:background="@color/white" />
-                    </LinearLayout>
-
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="16dp"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:id="@+id/iv_dexuat_book_3"
-                            android:layout_width="70dp"
-                            android:layout_height="100dp"
-                            android:layout_marginBottom="8dp"
-                            android:background="@color/white" />
-                    </LinearLayout>
-
-                </LinearLayout>
-            </HorizontalScrollView>
-
+                android:orientation="horizontal"
+                android:scrollbars="horizontal" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
