Sua doi 1 so loi nho

--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -54,6 +54,7 @@
                         android:layout_height="18dp"
                         android:layout_gravity="center"
                         android:layout_weight="1"
+                        android:background="@color/white"
                         app:srcCompat="@drawable/ic_canhan" />
 
                     <TextView
