--- a/app/src/main/res/layout/fragment_van_hoc.xml
+++ b/app/src/main/res/layout/fragment_van_hoc.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/teal_700"
-    tools:context=".Fragment.VanHoc" >
+    tools:context=".fragment.VanHoc" >
 
     <FrameLayout
         android:layout_width="match_parent"
