--- a/app/src/main/res/layout/bottom_navigation_bar.xml
+++ b/app/src/main/res/layout/bottom_navigation_bar.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/teal_700"
-    tools:context=".ui.UI">
+    tools:context=".ui.Menu">
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager2"
