Update Load Image HomePage

--- a/app/src/main/res/drawable/border_icon_search.xml
+++ b/app/src/main/res/drawable/border_icon_search.xml
@@ -3,13 +3,13 @@
     android:shape="oval">
 
 
-    <solid android:color="@color/gray" />
+    <solid android:color="@color/gray"
+        />
 
 
     <stroke
         android:width="2dp"
         android:color="@color/gray"
-
         />
 
 
