Fix margin properties for the dialog

--- a/app/src/main/res/layout/activity_dialog_added_book.xml
+++ b/app/src/main/res/layout/activity_dialog_added_book.xml
@@ -60,7 +60,7 @@
                     android:id="@+id/btbDeSau"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="20dp"
+                    android:layout_marginEnd="20dp"
                     android:background="@drawable/btn_border_round"
                     android:text="Để sau"
                     android:textColor="@color/button_green" />
