--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -8,6 +8,7 @@
     android:padding="16dp">
 
     <TableLayout
+        android:id="@+id/table"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -25,9 +26,8 @@
                 android:layout_width="160dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="20sp"
-                android:orientation="vertical"
                 android:layout_weight="1"
-                >
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/textView4"
